# gameai-assignment-vision

./: .gitignore  CMakeLists.txt  README.md
doc/: report.txt
src/: main.cpp
